[#S10P12A504-920] refactor: 비디오 스트림 유저명 받도록 변경